--- a/public/about.html
+++ b/public/about.html
@@ -41,7 +41,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     
     <!-- CSS -->
-    <link rel="stylesheet" href="/src/styles/main.scss">
+    <link rel="stylesheet" href="/src/styles/main.css">
 </head>
 <body>
     <!-- App Root -->
