--- a/public/media.html
+++ b/public/media.html
@@ -34,7 +34,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     
     <!-- CSS -->
-    <link rel="stylesheet" href="/src/styles/main.scss">
+    <link rel="stylesheet" href="/src/styles/main.css">
     
     <!-- Structured Data -->
     <script type="application/ld+json">
