Fix Vercel deployment: Add multi-page build support and fix CMS script type

--- a/public/cms/index.html
+++ b/public/cms/index.html
@@ -371,6 +371,6 @@
     <!-- Notification System -->
     <div id="notification" class="notification hidden"></div>
 
-    <script src="js/cms.js"></script>
+    <script type="module" src="js/cms.js"></script>
 </body>
 </html> 
