Remove arrow icons from buy buttons and add homepage section to CMS navigation

--- a/cms/index.html
+++ b/cms/index.html
@@ -89,6 +89,11 @@
                             </a>
                         </li>
                         <li>
+                            <a href="#homepage" class="nav-link" data-section="homepage">
+                                <i class="fas fa-home"></i> Homepage
+                            </a>
+                        </li>
+                        <li>
                             <a href="#settings" class="nav-link" data-section="settings">
                                 <i class="fas fa-cog"></i> Settings
                             </a>
