--- a/public/cms/index.html
+++ b/public/cms/index.html
@@ -43,6 +43,7 @@
                     <button class="nav-btn" data-section="settings">Settings</button>
                 </nav>
                 <button id="logout-btn" class="btn btn-secondary">Logout</button>
+                <button id="clear-token-btn" class="btn btn-danger" style="margin-left: 10px;">Clear Token</button>
             </div>
         </header>
 
