Add login test page and enhance CMS token management
- Introduced a new HTML page for testing CMS login functionality, including user input fields and result display.
- Updated Vercel configuration to route requests to the new login test page.
- Added a button in the CMS interface to clear stored tokens, improving user experience.
- Enhanced logging in the CMS JavaScript for better traceability during authentication processes.

--- a/public/cms/index.html
+++ b/public/cms/index.html
@@ -26,6 +26,7 @@
                 <button type="submit" class="btn btn-primary">Login</button>
             </form>
             <div id="login-error" class="error-message hidden"></div>
+            <button id="clear-tokens-btn" class="btn btn-secondary" style="margin-top: 10px;">Clear Stored Tokens</button>
         </div>
     </div>
 
