Update meta tags and image references across multiple HTML files
- Changed Open Graph and Twitter card image URLs to point to the new image for consistency.
- Updated canonical URLs to reflect the correct domain for all relevant pages.
- Added a new image file 'himanjalisankar.png' to the public directory for use in meta tags.

--- a/public/about.html
+++ b/public/about.html
@@ -13,7 +13,7 @@
     <meta property="og:url" content="https://himanjalisankar.com/about">
     <meta property="og:title" content="About Himanjali Sankar - Author Biography & Background">
     <meta property="og:description" content="Learn about Himanjali Sankar, an award-winning author crafting heartwarming stories that bridge generations and cultures.">
-    <meta property="og:image" content="/images/og-image.jpg">
+    <meta property="og:image" content="https://himanjalisankar.com/himanjalisankar.png">
     <meta property="og:site_name" content="Himanjali Sankar - Author">
 
     <!-- Twitter -->
@@ -21,7 +21,7 @@
     <meta property="twitter:url" content="https://himanjalisankar.com/about">
     <meta property="twitter:title" content="About Himanjali Sankar - Author Biography & Background">
     <meta property="twitter:description" content="Learn about Himanjali Sankar, an award-winning author crafting heartwarming stories that bridge generations and cultures.">
-    <meta property="twitter:image" content="/images/og-image.jpg">
+    <meta property="twitter:image" content="https://himanjalisankar.com/himanjalisankar.png">
 
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
