--- a/public/index.html
+++ b/public/index.html
@@ -13,14 +13,14 @@
     <meta property="og:url" content="https://himanjalisankar.com/">
     <meta property="og:title" content="Himanjali Sankar - Author">
     <meta property="og:description" content="Official website of author Himanjali Sankar - explore her literary works, media coverage, and connect with the author.">
-    <meta property="og:image" content="/images/og-image.jpg">
+    <meta property="og:image" content="https://himanjalisankar.com/himanjalisankar.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://himanjalisankar.com/">
     <meta property="twitter:title" content="Himanjali Sankar - Author">
     <meta property="twitter:description" content="Official website of author Himanjali Sankar - explore her literary works, media coverage, and connect with the author.">
-    <meta property="twitter:image" content="/images/og-image.jpg">
+    <meta property="twitter:image" content="https://himanjalisankar.com/himanjalisankar.png">
 
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
