Remove deprecated files and enhance logging and configuration handling
- Deleted unused scripts related to MongoDB connection testing and local setup.
- Introduced a new logging utility for improved traceability in production and development environments.
- Updated homepage configuration handling in the CMS to filter out unnecessary fields during updates.
- Added detailed logging for homepage configuration updates and error handling in the CMS API.
- Created a production deployment guide to streamline deployment processes and environment variable setup.

--- a/public/about.html
+++ b/public/about.html
@@ -14,6 +14,10 @@
     <meta property="og:title" content="About Himanjali Sankar - Author Biography & Background">
     <meta property="og:description" content="Learn about Himanjali Sankar, an award-winning author crafting heartwarming stories that bridge generations and cultures.">
     <meta property="og:image" content="https://himanjalisankar.com/himanjalisankar.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:alt" content="Himanjali Sankar - Author Portrait">
     <meta property="og:site_name" content="Himanjali Sankar - Author">
 
     <!-- Twitter -->
@@ -22,6 +26,7 @@
     <meta property="twitter:title" content="About Himanjali Sankar - Author Biography & Background">
     <meta property="twitter:description" content="Learn about Himanjali Sankar, an award-winning author crafting heartwarming stories that bridge generations and cultures.">
     <meta property="twitter:image" content="https://himanjalisankar.com/himanjalisankar.png">
+    <meta property="twitter:image:alt" content="Himanjali Sankar - Author Portrait">
 
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
