--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,11 @@
     <meta property="og:title" content="Himanjali Sankar - Author">
     <meta property="og:description" content="Official website of author Himanjali Sankar - explore her literary works, media coverage, and connect with the author.">
     <meta property="og:image" content="https://himanjalisankar.com/himanjalisankar.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:alt" content="Himanjali Sankar - Author Portrait">
+    <meta property="og:site_name" content="Himanjali Sankar - Author">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
@@ -21,6 +26,7 @@
     <meta property="twitter:title" content="Himanjali Sankar - Author">
     <meta property="twitter:description" content="Official website of author Himanjali Sankar - explore her literary works, media coverage, and connect with the author.">
     <meta property="twitter:image" content="https://himanjalisankar.com/himanjalisankar.png">
+    <meta property="twitter:image:alt" content="Himanjali Sankar - Author Portrait">
 
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
