--- a/public/media.html
+++ b/public/media.html
@@ -12,12 +12,18 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://himanjalisankar.com/media">
     <meta property="og:image" content="https://himanjalisankar.com/himanjalisankar.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:alt" content="Himanjali Sankar - Author Portrait">
+    <meta property="og:site_name" content="Himanjali Sankar - Author">
     
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Media - Himanjali Sankar | Author">
     <meta name="twitter:description" content="Explore media coverage, interviews, and press materials featuring Himanjali Sankar. Discover articles, videos, and press releases about the author and her work.">
     <meta name="twitter:image" content="https://himanjalisankar.com/himanjalisankar.png">
+    <meta name="twitter:image:alt" content="Himanjali Sankar - Author Portrait">
     
     <!-- Canonical URL -->
     <link rel="canonical" href="https://himanjalisankar.com/media">
