--- a/public/book-detail.html
+++ b/public/book-detail.html
@@ -12,12 +12,18 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://himanjalisankar.com/book-detail">
     <meta property="og:image" content="https://himanjalisankar.com/himanjalisankar.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:alt" content="Himanjali Sankar - Author Portrait">
+    <meta property="og:site_name" content="Himanjali Sankar - Author">
     
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Book Details - Himanjali Sankar | Author">
     <meta name="twitter:description" content="Discover the complete details of this book by Himanjali Sankar. Read reviews, learn about the story, and find where to purchase.">
     <meta name="twitter:image" content="https://himanjalisankar.com/himanjalisankar.png">
+    <meta name="twitter:image:alt" content="Himanjali Sankar - Author Portrait">
     
     <!-- Canonical URL -->
     <link rel="canonical" href="https://himanjalisankar.com/book-detail">
