--- a/public/contact.html
+++ b/public/contact.html
@@ -12,12 +12,18 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://himanjalisankar.com/contact">
     <meta property="og:image" content="https://himanjalisankar.com/himanjalisankar.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:alt" content="Himanjali Sankar - Author Portrait">
+    <meta property="og:site_name" content="Himanjali Sankar - Author">
     
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Contact - Himanjali Sankar | Author">
     <meta name="twitter:description" content="Get in touch with Himanjali Sankar. Send a message, inquire about events, media opportunities, or just say hello. We'd love to hear from you.">
     <meta name="twitter:image" content="https://himanjalisankar.com/himanjalisankar.png">
+    <meta name="twitter:image:alt" content="Himanjali Sankar - Author Portrait">
     
     <!-- Canonical URL -->
     <link rel="canonical" href="https://himanjalisankar.com/contact">
