Add Young Adult Fiction category and sample book integration
- Introduced a new category for Young Adult Fiction in the book selection dropdown in both the CMS and public-facing HTML files.
- Updated the BooksGrid and BooksPage components to handle and display Young Adult books, including data fetching and rendering logic.
- Added a script to insert a sample Young Adult book into the database, complete with metadata and reviews.
- Enhanced the API response structure to include Young Adult books, ensuring proper categorization and display in the application.

--- a/public/cms/index.html
+++ b/public/cms/index.html
@@ -237,6 +237,7 @@
                     <label for="book-category">Category</label>
                     <select id="book-category" name="category" required>
                         <option value="adults">Adult Fiction</option>
+                        <option value="young-adult">Young Adult Fiction</option>
                         <option value="children">Children's Books</option>
                     </select>
                 </div>
