Add comprehensive image optimization guide and implement image processing features
- Introduced a new `IMAGE_OPTIMIZATION_GUIDE.md` detailing the image optimization strategies for the Himanjali Sankar author website, including lazy loading, Cloudinary integration, and modern image formats.
- Added image optimization middleware in `server.js` using the Sharp library for on-the-fly image processing.
- Implemented batch image optimization script in `scripts/optimize-images.js` for local images, generating WebP and JPEG formats.
- Enhanced image handling in the frontend by integrating Cloudinary for optimized image URLs in `cloudinary-config.js`.
- Updated various components to utilize optimized images and lazy loading techniques, improving overall performance and user experience.
- Added performance monitoring utilities to track image loading metrics and Core Web Vitals in `performance-monitor.js`.
- Created a test HTML file for validating Cloudinary image optimization features and performance metrics.
- Updated package dependencies to include Sharp for image processing capabilities.

--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,10 @@
     
     <!-- CSS -->
     <link rel="stylesheet" href="/src/styles/main.css">
+    
+    <!-- Preload critical images -->
+    <link rel="preload" as="image" href="/himanjalisankar.png">
+    <link rel="preload" as="image" href="/favicon.ico">
 </head>
 <body>
     <!-- App Root -->
