Add SEO Implementation Guide and enhance meta tags across pages
- Introduced a comprehensive SEO Implementation Guide for the Himanjali Sankar website, detailing all SEO features and best practices.
- Enhanced meta tags in multiple HTML files, including keywords and robots directives, to improve search engine visibility.
- Updated structured data for various pages to align with schema.org standards, enhancing rich snippets in search results.
- Created a robots.txt file to manage search engine crawling and a sitemap.xml for better indexing.
- Added a web app manifest to support PWA capabilities, improving user experience on mobile devices.

--- a/public/about.html
+++ b/public/about.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Himanjali Sankar - Author Biography & Background</title>
     <meta name="description" content="Learn about Himanjali Sankar, an award-winning author crafting heartwarming stories that bridge generations and cultures. Discover her background, awards, publications, and literary journey.">
-    <meta name="keywords" content="Himanjali Sankar, author biography, about author, literary awards, publications, contemporary fiction, children's literature">
+    <meta name="keywords" content="Himanjali Sankar, author biography, about author, literary awards, publications, contemporary fiction, children's literature, Indian author, award-winning writer">
     <meta name="author" content="Himanjali Sankar">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
+    <meta name="googlebot" content="index, follow">
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="profile">
