--- a/public/book-detail.html
+++ b/public/book-detail.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Book Details - Himanjali Sankar | Author</title>
     <meta name="description" content="Discover the complete details of this book by Himanjali Sankar. Read reviews, learn about the story, and find where to purchase.">
+    <meta name="keywords" content="book details, book reviews, book information, Himanjali Sankar books, literature, fiction">
+    <meta name="author" content="Himanjali Sankar">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
+    <meta name="googlebot" content="index, follow">
     
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Book Details - Himanjali Sankar | Author">
@@ -46,14 +50,20 @@
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
-      "@type": "WebPage",
-      "name": "Book Details - Himanjali Sankar",
+      "@type": "Book",
+      "name": "Book Details",
       "description": "Discover the complete details of this book by Himanjali Sankar",
-      "url": "https://himanjali.com/book-detail",
+      "url": "https://himanjalisankar.com/book-detail",
       "author": {
         "@type": "Person",
         "name": "Himanjali Sankar"
-      }
+      },
+      "publisher": {
+        "@type": "Person",
+        "name": "Himanjali Sankar"
+      },
+      "bookFormat": "Hardcover",
+      "inLanguage": "en"
     }
     </script>
 </head>
