--- a/public/books.html
+++ b/public/books.html
@@ -46,13 +46,22 @@
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
-      "@type": "WebPage",
+      "@type": "CollectionPage",
       "name": "Books - Himanjali Sankar",
       "description": "Explore the complete collection of books by Himanjali Sankar",
-      "url": "https://himanjali.com/books",
+      "url": "https://himanjalisankar.com/books",
       "author": {
         "@type": "Person",
         "name": "Himanjali Sankar"
+      },
+      "publisher": {
+        "@type": "Person",
+        "name": "Himanjali Sankar"
+      },
+      "mainEntity": {
+        "@type": "ItemList",
+        "name": "Books by Himanjali Sankar",
+        "description": "Collection of fiction and children's literature"
       }
     }
     </script>
