--- a/public/contact.html
+++ b/public/contact.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact - Himanjali Sankar | Author</title>
     <meta name="description" content="Get in touch with Himanjali Sankar. Send a message, inquire about events, media opportunities, or just say hello. We'd love to hear from you.">
+    <meta name="keywords" content="contact Himanjali Sankar, author contact, book inquiries, media requests, speaking engagements, author events">
+    <meta name="author" content="Himanjali Sankar">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
+    <meta name="googlebot" content="index, follow">
     
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Contact - Himanjali Sankar | Author">
@@ -46,13 +50,18 @@
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
-      "@type": "WebPage",
+      "@type": "ContactPage",
       "name": "Contact - Himanjali Sankar",
       "description": "Get in touch with Himanjali Sankar",
-      "url": "https://himanjali.com/contact",
+      "url": "https://himanjalisankar.com/contact",
       "author": {
         "@type": "Person",
         "name": "Himanjali Sankar"
+      },
+      "mainEntity": {
+        "@type": "ContactPoint",
+        "contactType": "customer service",
+        "availableLanguage": "English"
       }
     }
     </script>
