--- a/public/media.html
+++ b/public/media.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media - Himanjali Sankar | Author</title>
     <meta name="description" content="Explore media coverage, interviews, and press materials featuring Himanjali Sankar. Discover articles, videos, and press releases about the author and her work.">
+    <meta name="keywords" content="Himanjali Sankar media, author interviews, press coverage, book reviews, literary press, author publicity">
+    <meta name="author" content="Himanjali Sankar">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
+    <meta name="googlebot" content="index, follow">
     
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Media - Himanjali Sankar | Author">
@@ -46,13 +50,18 @@
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
-      "@type": "WebPage",
+      "@type": "CollectionPage",
       "name": "Media - Himanjali Sankar",
       "description": "Explore media coverage, interviews, and press materials featuring Himanjali Sankar",
-      "url": "https://himanjali.com/media",
+      "url": "https://himanjalisankar.com/media",
       "author": {
         "@type": "Person",
         "name": "Himanjali Sankar"
+      },
+      "mainEntity": {
+        "@type": "ItemList",
+        "name": "Media Coverage",
+        "description": "Collection of media articles, interviews, and press materials"
       }
     }
     </script>
