Add social sharing image functionality and update meta tags
- Implemented a dynamic API endpoint to serve the author image, resolving previous 404 errors for social media platforms.
- Updated Vercel configuration to include a rewrite rule for the new image endpoint and adjusted function settings.
- Modified meta tags across multiple HTML files to reference the new image URL, enhancing social sharing capabilities.
- Created documentation detailing the changes and next steps for deployment and testing.

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <meta property="og:url" content="https://himanjalisankar.com/">
     <meta property="og:title" content="Himanjali Sankar - Author">
     <meta property="og:description" content="Official website of author Himanjali Sankar - explore her literary works, media coverage, and connect with the author.">
-    <meta property="og:image" content="https://himanjalisankar.com/himanjalisankar.png">
+    <meta property="og:image" content="https://himanjalisankar.com/social-image.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:image:type" content="image/png">
@@ -28,7 +28,7 @@
     <meta property="twitter:url" content="https://himanjalisankar.com/">
     <meta property="twitter:title" content="Himanjali Sankar - Author">
     <meta property="twitter:description" content="Official website of author Himanjali Sankar - explore her literary works, media coverage, and connect with the author.">
-    <meta property="twitter:image" content="https://himanjalisankar.com/himanjalisankar.png">
+    <meta property="twitter:image" content="https://himanjalisankar.com/social-image.png">
     <meta property="twitter:image:alt" content="Himanjali Sankar - Author Portrait">
 
     <!-- Canonical URL -->
@@ -63,7 +63,7 @@
       "@type": "Person",
       "name": "Himanjali Sankar",
       "url": "https://himanjalisankar.com",
-      "image": "https://himanjalisankar.com/himanjalisankar.png",
+      "image": "https://himanjalisankar.com/social-image.png",
       "description": "Award-winning author of fiction and children's literature",
       "jobTitle": "Author",
       "worksFor": {
