--- a/public/about.html
+++ b/public/about.html
@@ -15,7 +15,7 @@
     <meta property="og:url" content="https://himanjalisankar.com/about">
     <meta property="og:title" content="About Himanjali Sankar - Author Biography & Background">
     <meta property="og:description" content="Learn about Himanjali Sankar, an award-winning author crafting heartwarming stories that bridge generations and cultures.">
-    <meta property="og:image" content="https://himanjalisankar.com/himanjalisankar.png">
+    <meta property="og:image" content="https://himanjalisankar.com/social-image.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:image:type" content="image/png">
@@ -27,7 +27,7 @@
     <meta property="twitter:url" content="https://himanjalisankar.com/about">
     <meta property="twitter:title" content="About Himanjali Sankar - Author Biography & Background">
     <meta property="twitter:description" content="Learn about Himanjali Sankar, an award-winning author crafting heartwarming stories that bridge generations and cultures.">
-    <meta property="twitter:image" content="https://himanjalisankar.com/himanjalisankar.png">
+    <meta property="twitter:image" content="https://himanjalisankar.com/social-image.png">
     <meta property="twitter:image:alt" content="Himanjali Sankar - Author Portrait">
 
     <!-- Favicon -->
