--- a/public/book-detail.html
+++ b/public/book-detail.html
@@ -15,7 +15,7 @@
     <meta property="og:description" content="Discover the complete details of this book by Himanjali Sankar. Read reviews, learn about the story, and find where to purchase.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://himanjalisankar.com/book-detail">
-    <meta property="og:image" content="https://himanjalisankar.com/himanjalisankar.png">
+    <meta property="og:image" content="https://himanjalisankar.com/social-image.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:image:type" content="image/png">
@@ -26,7 +26,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Book Details - Himanjali Sankar | Author">
     <meta name="twitter:description" content="Discover the complete details of this book by Himanjali Sankar. Read reviews, learn about the story, and find where to purchase.">
-    <meta name="twitter:image" content="https://himanjalisankar.com/himanjalisankar.png">
+    <meta name="twitter:image" content="https://himanjalisankar.com/social-image.png">
     <meta name="twitter:image:alt" content="Himanjali Sankar - Author Portrait">
     
     <!-- Canonical URL -->
